--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '26.0.0'
 
     defaultConfig {
-        applicationId 'ru.meefik.busybox'
+        applicationId 'ru.meefik.busybox.addond'
         minSdkVersion 9
         targetSdkVersion 25
         versionCode 34
